test/cli/test/images/verify-digest/kyverno-test.yaml
name: test-image-verify-signature
policies:
  - policies.yaml
resources:
  - resources.yaml
results:
  - policy: check-image
    rule: verify-signature
    resource: withdigest
    kind: Pod
    status: pass
  - policy:  check-image
    rule: verify-signature
    resource: withoutdigest
    kind: Pod
    status: fail
