test/cli/test/images/verify-digest/policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-digest
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: verify-digest
      match:
        resources:
          kinds:
            - Pod
      verifyImages:
      - imageReferences:
        - "*"
        verifyDigest: true
        attestors:
        - count: 1
          entries:
          - staticKey: 
              key: |-       
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
[...]
                -----END PUBLIC KEY-----
